fix rounded button on mobile

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -105,6 +105,10 @@ sup {
         text-align: right;
         text-wrap: nowrap;
     }
+
+    .btn-connect {
+        line-height: 32px;
+    }
 }
 
 .card-background:hover {
